# riffy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Plan.md  Progress.md  README.md  config.example.yaml  docker-compose.yaml  review.md
.claude/skills/frontend-ui/: SKILL.md
.claude/skills/riffy-onboarding/: SKILL.md
.claude/skills/update-architecture-doc/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  improvements.md  metrics.md
src/: error.rs  lib.rs  main.rs  test_support.rs
src/analysis/: classify.rs  collector.rs  counters.rs  engine.rs  error.rs  filter.rs  joined.rs  mod.rs  snapshot.rs  suppress.rs
src/analysis/tests/: analyzer_test.rs  classify_test.rs  collector_test.rs  counters_test.rs  engine_test.rs  filter_test.rs  joined_test.rs  mod.rs  snapshot_test.rs  suppress_test.rs
src/compare/: diff.rs  error.rs  flatten.rs  mod.rs
src/compare/tests/: diff_test.rs  flatten_test.rs  mod.rs
src/config/: default.yaml  error.rs  mod.rs
src/config/tests/: load_test.rs  mod.rs  validate_test.rs
src/consumer/: curl.rs  mod.rs  sample.rs
src/consumer/tests/: consumer_test.rs  curl_test.rs  mod.rs
src/endpoint/: mod.rs
src/endpoint/tests/: matcher_test.rs  mod.rs
src/handler/: mod.rs  proxy.rs  query.rs  router.rs
src/http/: forward.rs  metrics.rs  mod.rs  query.rs  router.rs  ui.rs
src/http/tests/: metrics_test.rs  mod.rs
src/http/ui/: index.html
src/pipeline/: consumer.rs  curl.rs  decode.rs  metrics.rs  mod.rs
src/pipeline/tests/: consumer_test.rs  curl_test.rs  decode_test.rs  mod.rs
src/proxy/: error.rs  handler.rs  mod.rs  router.rs  upstream.rs
src/redis/: error.rs  memory.rs  mod.rs  store.rs
src/storage/: error.rs  memory.rs  mod.rs  redis.rs
src/storage/tests/: aggregation_test.rs  memory_test.rs  mod.rs
src/telemetry/: metrics.rs  mod.rs  timer.rs
src/telemetry/tests/: metrics_test.rs  mod.rs  timer_test.rs
src/upstream/: body.rs  client.rs  error.rs  header.rs  metrics.rs  mod.rs
src/upstream/tests/: body_test.rs  header_test.rs  metrics_test.rs  mod.rs
tests/: proxy_integration.rs  query_api.rs
