[package]
name = "riffy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "timeout"] }

# HTTP client (upstream proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time (ISO-8601 timestamps for Redis entries; already transitive via tracing-subscriber)
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Decompression of content-encoded upstream bodies (analysis side only)
async-compression = { version = "0.4", features = ["tokio", "gzip", "zlib", "brotli", "zstd"] }

# Configuration
config = { version = "0.15", default-features = false, features = ["yaml", "json"] }
humantime-serde = "1"
clap = { version = "4", features = ["derive"] }
garde = { version = "0.22", features = ["derive"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Concurrency
dashmap = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Dyn-compatible async traits (DiffStore); analysis side only, off the hot path
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.33.0"

# Allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]

# Production release profile: thin LTO for runtime performance, symbols
# stripped for a small image. Panics keep the default unwind so a panicking
# background analysis task is contained by tokio instead of aborting the proxy.
[profile.release]
lto = "thin"
strip = true
